modification tests